FullQa New/src/objects/Current_Obligation__c.object
<CustomObject>
    <fields>
        <fullName>AccessStartDate__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-996</description>
        <label>Access Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Expiration_Alert_Date__c</fullName>
        <formula>Current_Obligation_End__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Expiration Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Current Obligations</relationshipLabel>
        <relationshipName>Current_Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-996</description>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biztech_Item_ID__c</fullName>
        <label>Biztech Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Lead_Create_Date__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-6171</description>
        <label>CAM Lead Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQId__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-996</description>
        <label>CPQ Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Obligation CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectorLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Current Obligations</relationshipLabel>
        <relationshipName>Current_Obligations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Obligation_End__c</fullName>
        <label>Current Obligation End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Obligation_Start__c</fullName>
        <label>Current Obligation Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountedExtendedAmount__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-996</description>
        <label>Discounted Extended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_of_Agreement_Behavior__c</fullName>
        <label>End of Agreement Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Renew at catalog pricing</fullName>
                </value>
                <value>
                    <fullName>Renew subject to an annual increase of 5%</fullName>
                </value>
                <value>
                    <fullName>Renew with lock for 3 terms, subject to an annual increase of 5% then catalog pricing</fullName>
                </value>
                <value>
                    <fullName>Renew with lock for 2 terms, subject to an annual increase of 5% then catalog pricing</fullName>
                </value>
                <value>
                    <fullName>Renew with lock for 1 terms, subject to an annual increase of 5% then catalog pricing</fullName>
                </value>
                <value>
                    <fullName>Renew with lock for 3 terms, then revert to catalog pricing</fullName>
                </value>
                <value>
                    <fullName>Renew with lock for 2 terms, then revert to catalog pricing</fullName>
                </value>
                <value>
                    <fullName>Renew with lock for 1 term, then revert to catalog pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <label>External ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Units__c</fullName>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-996</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Level__c</fullName>
        <formula>CASE(TEXT(ConnectorLookup__r.Platform_Cateogry__c), &quot;Level 0&quot;,0,&quot;Level 1&quot;,1,&quot;Level 2&quot;,2,&quot;Level 3&quot;,3,&quot;Level 4&quot;,4,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Format__c</fullName>
        <label>Price Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-996</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-6171</description>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tier_from__c</fullName>
        <label>tier from</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tier_to__c</fullName>
        <label>tier to</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Current Obligation</label>
    <nameField>
        <displayFormat>AvaCob{0000}</displayFormat>
        <label>Current Obligation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>